--- a/hw2/02-search.html
+++ b/hw2/02-search.html
@@ -6,17 +6,27 @@
     <title>02 - Search</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <script defer src="02-data.js"></script>
     <script defer src="02-search.js"></script>
   </head>
-  <body>
+  <body class="bg-dark">
     <main>
-      <h1>Exercise 02 - Search</h1>
-      <div>
-        <label for="userInput">Search: </label>
-        <input type="text" id="userInput" />
-        <input type="button" value="Search Character: " />
+      <div class="container mt-5">
+        <div class="row bg-light justify-content-center">
+          <div class="col-8 p-4 text-center">
+            <h1 class="mb-4">Exercise 02 - Search</h1>
+            <!--Ex. snippet doesn't have a label?-->
+            <label for="userInput"></label>
+            <input type="text" id="userInput" />
+            <button id="searchButton" class="btn btn-primary">Search</button>
+          </div>
+        </div>
+        <div
+          class="row bg-light text-center justify-content-center"
+          id="results"
+        ></div>
       </div>
     </main>
   </body>
