Reflecting glatimer PR review

--- a/hw2/02-search.html
+++ b/hw2/02-search.html
@@ -14,8 +14,8 @@
   <body class="bg-dark">
     <main>
       <div class="container mt-5">
-        <div class="row bg-light justify-content-center">
-          <div class="col-8 p-4 text-center">
+        <div class="row justify-content-center">
+          <div class="col-8 bg-light p-5 text-center">
             <h1 class="mb-4">Exercise 02 - Search</h1>
             <!--Ex. snippet doesn't have a label?-->
             <label for="userInput"></label>
@@ -23,10 +23,7 @@
             <button id="searchButton" class="btn btn-primary">Search</button>
           </div>
         </div>
-        <div
-          class="row bg-light text-center justify-content-center"
-          id="results"
-        ></div>
+        <div class="row text-center justify-content-center" id="results"></div>
       </div>
     </main>
   </body>
