--- a/hw2/05-form.html
+++ b/hw2/05-form.html
@@ -53,42 +53,46 @@
                   <option>Closed</option>
                 </select>
               </div>
-              <div class="mb-3">
-                <p>Have you taken any of the following courses?</p>
-                <div class="form-check fw-normal">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="PL"
-                    name="Programming Languages"
-                  />
-                  <label class="form-check-label" for="PL"
-                    >Programming Languages</label
-                  >
+              <fieldset>
+                <legend class="fs-6">
+                  Have you taken any of the following courses?
+                </legend>
+                <div class="mb-3">
+                  <div class="form-check fw-normal">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="PL"
+                      name="Programming Languages"
+                    />
+                    <label class="form-check-label" for="PL"
+                      >Programming Languages</label
+                    >
+                  </div>
+                  <div class="form-check fw-normal">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="OS"
+                      name="Operating Systems"
+                    />
+                    <label class="form-check-label" for="OS"
+                      >Operating Systems</label
+                    >
+                  </div>
+                  <div class="form-check fw-normal">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="WD"
+                      name="Full Stack"
+                    />
+                    <label class="form-check-label" for="WD"
+                      >Full Stack Web Development</label
+                    >
+                  </div>
                 </div>
-                <div class="form-check fw-normal">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="OS"
-                    name="Operating Systems"
-                  />
-                  <label class="form-check-label" for="OS"
-                    >Operating Systems</label
-                  >
-                </div>
-                <div class="form-check fw-normal">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="WD"
-                    name="Full Stack"
-                  />
-                  <label class="form-check-label" for="WD"
-                    >Full Stack Web Development</label
-                  >
-                </div>
-              </div>
+              </fieldset>
               <div class="mb-3">
                 <label class="form-label" for="text">Anything else?</label>
                 <textarea
